# hse-dc-lab2

./: .gitignore  CMakeLists.txt  README.md  matvec_results.csv  results.csv
graphs/: cannon.py  dirichlet.py  matvec.py
results/: cannon1.csv  cannon2.csv  cannon4.csv  dirichlet1.csv  dirichlet4.csv  dirichlet9.csv  matvec1.csv  matvec2.csv  matvec4.csv
src/cannon/: cannon.c  cannon.h  main.c
src/dirichlet/: dirichlet.c  dirichlet.h  main.c
src/matvec/: main.c  matvec.c  matvec.h
